[project]
name = "pdf2mark"
version = "0.0.1"
authors = [
  { name="zhenhua32", email="zhenhua32@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/zhenhua32/pdf2mark"
Issues = "https://github.com/zhenhua32/pdf2mark/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
